Run UI tests in headless mode